added "rewrites" to json

--- a/vercel.json
+++ b/vercel.json
@@ -12,4 +12,9 @@
         "dest": "/api/index.py"
       }
     ]
+    {
+      "rewrites": [
+        { "source": "/(.*)", "destination": "/api/index" }
+      ]
+    }
   }
