removed JSON comment

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
   ],
   "crons": [{
     "path": "/api/autoupdate",
-    "schedule": "0 11 * * *"  // Runs daily at 11am UTC/3am pst
+    "schedule": "0 11 * * *"  
   }]
 }
